--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.6.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>1.5.5.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
